--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,20 @@ body {
 }
 
 #result {
-  font-size: 22px;
   font-weight: bold;
   width: 100%;
   text-align: center;
+  margin-top: 20px;
+  font-size: 1.5em;
+  color: #12581e;
+}
+
+#result-container {
+  font-size: 38px;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  color: #862311;
 }
 
 h1 {
@@ -123,12 +133,6 @@ button:hover {
 
 #dice-button:hover {
   background-color: #218838;
-}
-
-#result {
-  margin-top: 20px;
-  font-size: 1.2em;
-  color: #333;
 }
 
 #random-image {
